--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,54 @@
 body {
-    background-color: slateblue;
+    height: 100vh;
+    display: flex;
+    padding: 0px;
+    margin: 0px;
 }
+
+#splash {
+    height: 100%;
+    position: relative;
+}
+
+img {
+    width: auto;
+    height: 100%;
+    position: relative;
+}
+
+#title {
+    width: 663px;
+    height: 200px;
+    background-color: rgba(200, 200, 200, 0.5);
+    position: absolute;
+    top: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 h1 {
     color: orange;
+}
+
+#sign-up-area {
+    padding: 5%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#user-form {
+    background-color: rgba(222,184,135, 0.5);
+    width: auto;
+    height: auto;
+    padding: 60px;
+}
+
+#page-info {
+    color: brown;
+    font-size: 24px;
+    font-weight: bold;
 }
